fixes full incipit spacing

--- a/styling.scss
+++ b/styling.scss
@@ -1,6 +1,11 @@
 /*-- scss:rules --*/
 
-img.incipit {
+img.incipit-main {
+  max-width: 100%;
+}
+
+img.incipit-full {
+  margin-top: .8rem;
   max-width: 100%;
 }
 
